--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.13",
+    "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
     "pug": "^2.0.3"
   }
