--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0"
   }
 }
